BUG: 134329

Accept fragment identifiers like "#" and "#top".

svn path=/branches/KDE/3.5/kdewebdev/klinkstatus/; revision=587660